--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   web:
+    container_name: sc-web
     image: ostis/sc-web:0.7.0
     build:
       context: ./sc-web
@@ -7,7 +8,7 @@ services:
     ports:
       - "8000:8000"
     networks:
-      - sc-machine
+      - ostis-network
     command:
       - "--server-host=machine"
     depends_on:
@@ -15,6 +16,7 @@ services:
         condition: service_healthy
 
   machine:
+    container_name: sc-machine
     image: ostis/sc-machine:0.7.0
     build:
       context: ./sc-machine
@@ -22,7 +24,7 @@ services:
     volumes:
       - ./:/kb
     networks:
-      - sc-machine
+      - ostis-network
     ports:
       - "8090:8090"
     healthcheck:
@@ -41,4 +43,4 @@ services:
       - "serve"
 
 networks:
-  sc-machine: {}
+  ostis-network: {}
