update: move kb.bin -> sc-mashine/kb.bin

--- a/ostis-web-platform.ini
+++ b/ostis-web-platform.ini
@@ -6,7 +6,7 @@ max_events_and_agents_threads = 32
 save_period = 3600
 update_period = 1800
 
-repo_path = kb.bin
+repo_path = /sc-machine/kb.bin
 ; ostis_path = sc-machine/bin
 extensions_path = /sc-machine/bin/extensions
 
