--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,13 @@
 services:
-  web:
-    container_name: sc-web
-    image: ostis/sc-web:0.7.0
-    build:
-      context: ./sc-web
-    restart: unless-stopped
-    ports:
-      - "80:8000"
-    networks:
-      - ostis-network
-    command:
-      - "--server-host=machine"
-      - "--public-url=ws://localhost:8090/ws_json"
-    depends_on:
-      machine:
-        condition: service_healthy
-
   machine:
-    container_name: sc-machine
-    image: ostis/sc-machine:0.7.0
+    image: ostis/sc-machine:latest
     build:
       context: ./sc-machine
-    restart: unless-stopped
     volumes:
-      - ./:/kb
+      - ./kb:/kb
+      - kb-binary:/kb.bin
     networks:
-      - ostis-network
+      - sc-machine
     ports:
       - "8090:8090"
     healthcheck:
@@ -36,12 +18,32 @@ services:
       start_period: 120s
     environment:
       # Use the commented env variable if you need to rebuild KB every startup.
-      - "REBUILD_KB=1"
-      - "KB_PATH=/kb/repo.path"
-      - "CONFIG_PATH=/kb/ostis-web-platform.ini"
+      - "REBUILD_KB=${REBUILD_KB:-1}"
+      - "KB_PATH=${KB_PATH:-/kb/repo.path}"
       - "BINARY_PATH=/sc-machine/bin"
+      - "CONFIG_PATH=/sc-machine/sc-machine.ini"
     command:
       - "serve"
 
+  web:
+    container_name: sc-web
+    image: ostis/sc-web:latest
+    build:
+      context: ./sc-web
+    restart: unless-stopped
+    ports:
+      - "80:8000"
+    networks:
+      - sc-machine
+    command:
+      - "--server-host=machine"
+      - "--public-url=ws://localhost:8090/ws_json"
+    depends_on:
+      machine:
+        condition: service_healthy  
+
+volumes:
+  kb-binary: {}
+
 networks:
-  ostis-network: {}
+  sc-machine: {}
